# trinity

./: .gitignore  .gitmodules  AGENTS.md  ALResult.cpp  ALResult.h  ALResultBlue.cpp  CMakeLists.txt  CMakePresets.json  D3DFundamentalTypes.h  ITr2EffectValue.h  ITr2PickableScene.h  ITr2RenderContextEvents.h  README.md  RegenerateProjectFile.cmd  RegenerateProjectFile_v141.cmd  StdAfx.h  TbbStub.h  Tr2AdapterStructures.h  Tr2AddSafeGrowableBuffer.h  Tr2AtlasTexture.cpp  Tr2AtlasTexture.h  Tr2AtlasTexture_Blue.cpp  Tr2AutoResetObjectAL.cpp  Tr2AutoResetObjectAL.h  Tr2Blitter.cpp  Tr2BufferImplALDx11.cpp  Tr2BufferImplALDx11.h  Tr2BufferImplALOrbis.cpp  Tr2BufferImplALOrbis.h  Tr2CapsALGL4.cpp  Tr2CapsALGLES2.cpp  Tr2CapsALOrbis.cpp  Tr2CapsALOrbis.h  Tr2ConstantBufferALDx11.cpp  Tr2ConstantBufferALDx11.h  Tr2ConstantBufferALDx9.cpp  Tr2ConstantBufferALGL4.cpp  Tr2ConstantBufferALGL4.h  Tr2ConstantBufferALGLES2.cpp  Tr2ConstantBufferALOrbis.cpp  (+295 more)
Apex/: Tr2ApexRenderer.cpp
Controllers/: Tr2BindingPoint.cpp  Tr2BindingPoint.h  Tr2ControllerExpression.cpp  Tr2ControllerExpression.h  Tr2ControllerReference.cpp  Tr2ControllerReference.h  Tr2Controller_Blue.cpp  Tr2StateMachineState.cpp  Tr2StateMachineTransition.cpp  Tr2StateMachineTransition.h  Tr2StateMachineTransition_Blue.cpp
Curves/: Tr2CurveColor.cpp  Tr2CurveColor.h  Tr2CurveColor_Blue.cpp  Tr2CurveEulerRotation.cpp  Tr2CurveEulerRotation.h  Tr2CurveEulerRotationExpression.cpp  Tr2CurveEulerRotationExpression.h  Tr2CurveEulerRotationExpression_Blue.cpp  Tr2CurveEulerRotation_Blue.cpp  Tr2CurveQuaternion_Blue.cpp  Tr2CurveRandomAxisRotation.cpp  Tr2CurveRandomAxisRotation.h  Tr2CurveRandomAxisRotation_Blue.cpp  Tr2CurveScalar.cpp  Tr2CurveScalar.h  Tr2CurveScalarExpression.cpp  Tr2CurveScalarExpression.h  Tr2CurveScalarExpression_Blue.cpp  Tr2CurveScalar_Blue.cpp  Tr2CurveVector2.cpp  Tr2CurveVector2.h  Tr2CurveVector2_Blue.cpp  Tr2CurveVector3.cpp  Tr2CurveVector3.h  Tr2CurveVector3Expression.cpp  Tr2CurveVector3Expression.h  Tr2CurveVector3Expression_Blue.cpp  Tr2CurveVector3_Blue.cpp  Tr2GrannyTransformTrack.cpp  Tr2RotationAdapter.cpp  Tr2RotationAdapter.h  Tr2RotationAdapter_Blue.cpp  Tr2ScalarExprKeyCurve.cpp  Tr2ScalarExprKeyCurve.h  Tr2TranslationAdapter.cpp  Tr2TranslationAdapter.h  Tr2TranslationAdapter_Blue.cpp  TriCurveSet.cpp  TriCurveSet.h  TriCurveSet_Blue.cpp  (+1 more)
EffectParameter/: Tr2FloatParameter.cpp  Tr2FloatParameter.h  Tr2GeometryBufferParameter.cpp  Tr2GeometryBufferParameter.h  Tr2Matrix4Parameter.cpp  Tr2Matrix4Parameter.h  Tr2Vector2Parameter.cpp  Tr2Vector2Parameter.h  Tr2Vector3Parameter.cpp  Tr2Vector3Parameter.h  Tr2Vector4Parameter.cpp  Tr2Vector4Parameter.h  TriFloatArrayParameter.cpp  TriFloatArrayParameter.h  TriTexture2DParameter.cpp  TriTexture2DParameter.h  TriTexture2DParameter_Blue.cpp  TriTextureParameter.cpp  TriTextureParameter.h  TriTransformParameter.cpp  TriTransformParameter.h  TriVariableParameter.cpp  TriVariableParameter.h
Eve/: EveCamera.cpp  EveCurveLineSet.cpp  EveCurveLineSet.h  EveDistanceField.cpp  EveDistanceField.h  EveDistanceField_Blue.cpp  EveDustfieldConstraint.cpp  EveDustfieldConstraint.h  EveDustfieldConstraint_Blue.cpp  EveEffectRoot2.cpp  EveEffectRoot2.h  EveEffectRoot2_Blue.cpp  EveEntity.cpp  EveEntity.h  EveLensflare.cpp  EveLensflare_Blue.cpp  EveLineSet.cpp  EveLineSet.h  EveLineSet_Blue.cpp  EveLocalPositionCurve.cpp  EveLocalPositionCurve.h  EveLocalPositionCurve_Blue.cpp  EveMultiEffect.cpp  EveMultiEffect.h  EveOccluder.cpp  EveOccluder_Blue.cpp  EvePlanet.cpp  EvePlanet.h  EvePlanet_Blue.cpp  EveProjectBracket.cpp  EveProjectBracket_Blue.cpp  EveRootTransform.cpp  EveRootTransform.h  EveShip2Builder.cpp  EveShip2Builder_Blue.cpp  EveSpaceScene.cpp  EveSpaceScene.h  EveSpaceScene_Blue.cpp  EveSpherePin.cpp  EveSpherePin.h  (+16 more)
Font/: Tr2FontMeasurer.cpp  Tr2FontMeasurer.h
Include/: ITr2Interior.h  ITriDevice.h  ITriEffectParameter.h  ITriTargetable.h  Tr2Curve.h  TrinityId.cxx
Interior/: Tr2IntSkinnedObject.cpp  Tr2InteriorCell.cpp  Tr2InteriorConstantBufferFormats.h  Tr2InteriorLightSet.cpp  Tr2InteriorLightSource.cpp  Tr2InteriorLightSource.h  Tr2InteriorLightSource_Blue.cpp  Tr2InteriorParticleObject.cpp  Tr2InteriorPlaceable.cpp  Tr2InteriorPlaceable.h  Tr2InteriorRenderBatch.cpp  Tr2InteriorRenderBatch.h  Tr2InteriorSHLightingSolver.cpp  Tr2InteriorScene.cpp  Tr2InteriorScene.h  Tr2InteriorScene_Blue.cpp  Tr2InteriorStatic.cpp
Particle/: Tr2GpuParticleSystem.cpp  Tr2GpuParticleSystem.h  Tr2GpuSharedEmitter.cpp  Tr2GpuSharedEmitter.h  Tr2GpuSharedEmitter_Blue.cpp  Tr2GpuUniqueEmitter_Blue.cpp  Tr2ParticleElementDeclaration.h  Tr2ParticleSystem.cpp  Tr2ParticleSystem.h  Tr2PlaneConstraint.cpp  Tr2StaticEmitter.cpp
PostProcess/: Tr2PostProcess2.h  Tr2PostProcess2_Blue.cpp  Tr2PostProcessRenderInfo.cpp  Tr2PostProcessRenderInfo.h
RenderJob/: TriRenderJob.cpp  TriRenderJob_Blue.cpp  TriStepRenderFps.cpp  TriStepRenderPostProcess.cpp  TriStepRenderPostProcess.h  TriStepRenderPostProcess_Blue.cpp  TriStepSetVariableStore.cpp  TriStepSetVariableStore_Blue.cpp
Resources/: Tr2CompositedVectorTextureRes.cpp  Tr2EffectRes.cpp  Tr2EffectRes.h  Tr2GrannyStateRes.cpp  Tr2GrannyStateRes.h  Tr2GrannyStateRes_Blue.cpp  Tr2ImageRes.cpp  Tr2LightProfileRes.cpp  Tr2LodResource.cpp  Tr2LodResource.h  Tr2TextureLodManager.cpp  Tr2TextureLodManager.h  Tr2TextureLodManager_Blue.cpp  TriGeometryRes.cpp  TriGeometryRes.h  (+6 more)
samples/animated_model/: AnimatedModel.mm  CMakeLists.txt
samples/animated_model/Assets/Box/: Box.gltf
samples/animated_model/Shaders/: PositionColor.psh  PositionColor.vsh
samples/hello_triangle/: CMakeLists.txt  ConstantColor.psh  HelloTriangle.mm  PositionOnly.vsh
tools/dds_to_rgba/: CMakeLists.txt  DdsToRgba.cpp
tools/froxel_lab/: CMakeLists.txt  FroxelProbe.mm  bootstrap_sacrificial.sh  experiments.json  export_evidence.sh  froxel_lab.py  recover_and_collect.sh  run_experiment.sh  test_froxel_lab.py
tools/gltf_to_cmf/: CMakeLists.txt  GltfToCmf.cpp  GltfToCmf.h  GltfToCmfMain.cpp
tools/rgba_to_dds/: CMakeLists.txt  RgbaToDds.cpp
(+699 files in other folders)
